CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

5 July 2007
+ Fixed bug #1747940 - chnaged dbpager direction arrows.

2 July 2007
+ Added yet another mime type for FLV files to file_types.php

28 June 2007
+ Core - log error check failed if the file didn't exist. Fixed it.


27 June 2007
+ Core - Changed error messages for log file writing.
+ Editor - Added ability to set editor width and height
+ Form - changed to reflect width and height changes in Editor

+ Javascript
  o fckeditor : now uses width and height settings
                fixed directory setting
  o tinymce   : now uses width and height settings

  o open_window : can now choose the 'type' of interface: button or
    link

+ Setup - removed the compatibility mode from config.tpl
+ default theme
  o fixed float-left and float-right margins
  o Added pagesmith setting
                

22 June 2007
+ Database - added missing NOT IN and NOT BETWEEN where conditions.

14 June 2007
+ Moved XMLParser file out from RSS and into the core.
+ Added a "format" function to better synthesis XML information


11 June 2007
+ Added getid3 library 

>>>>>>> .r4887
8 June 2007
+ Added some extra instruction to javascript's select_confirm
  documentation.


1 June 2007
+ Fixed bad directions in Language.txt
+ Added addslashes to the source directory setting. Why you'd want
  apostrophes in your directory structure is beyond me.

29 May 2007
+ Added new file types and multimedia setting to file_types.php
+ Debug.php - Boolean true was showing up as "1" with test.
+ File.php  - Added getFileExtension function. Returns the last
              characters after the period on a filename.
+ Form.php  - added setOptgroup function for select and multiple form
              elements
+ Forms.txt - added directions for use of setOptgroup in Form class
+ Added Danish translation files for core supplied by Claus Iversen.
+ Updated files : config/file_types.php


