@@ -119,6 +119,21 @@ class mysql_PHPWS_SQL {
 
         return array("ALTER TABLE $table ADD $column $parameter $location;");
     }
+
+    function lockTables($locked)
+    {
+        foreach ($locked as $lck) {
+            $tbls[] = sprintf('%s %s', $lck['table'], strtoupper($lck['status']));
+        }
+
+        return sprintf('LOCK TABLES %s', implode(', ', $tbls));
+    }
+
+    function unlockTables()
+    {
+        return 'UNLOCK TABLES;';
+    }
+
 }
 
 ?>
