@@ -2,6 +2,18 @@ CHANGELOG
 This is the change log for the phpWebSite base only. Each module has
 its own separate CHANGELOG file.
 
+12 July 2007
++ Database
+  o Added setLock, lockTables, and unlockTables functions. Factory
+    files updated as well thought postgresql is untested.
+  o Added fourth parameter to addColumn. Lets you perform single
+    column counts
+  o The reset function now cleans out the tables array leaving only
+    the initial table
++ Added define to setup config.tpl turn off table lock ability for
+  those that don't have those permissions.
+
+
 5 July 2007
 + Fixed bug #1747940 - chnaged dbpager direction arrows.
 
